--- a/index.html
+++ b/index.html
@@ -1333,6 +1333,24 @@
 
     <!-- Scripts -->
     <script>
+        (function handleSupabaseAuthRedirect() {
+            const hash = window.location.hash || '';
+            if (!hash.includes('access_token=')) return;
+
+            const hashParams = new URLSearchParams(hash.startsWith('#') ? hash.slice(1) : hash);
+            const type = hashParams.get('type');
+
+            if (type === 'signup') {
+                window.location.replace(`${window.location.origin}/app/confirmar-trial.html${hash}`);
+                return;
+            }
+
+            if (type === 'recovery') {
+                window.location.replace(`${window.location.origin}/app/reset-senha.html${hash}`);
+                return;
+            }
+        })();
+
         // =====================================================
         // NAVBAR SCROLL
         // =====================================================
