--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -1138,19 +1138,36 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/access-control.js"></script>
     <script src="js/notifications.js"></script>
     <script src="js/dashboard.js"></script>
     <script>
-        // Inicializar notificações após login
-        document.addEventListener('DOMContentLoaded', () => {
-            const checkAndInitNotifications = () => {
-                if (window.supabaseClient && window.notifications) {
-                    window.notifications.init();
-                } else {
-                    setTimeout(checkAndInitNotifications, 500);
-                }
+        // Verificar acesso e inicializar página
+        document.addEventListener('DOMContentLoaded', async () => {
+            // Aguardar Supabase carregar
+            const waitForSupabase = () => {
+                return new Promise((resolve) => {
+                    const check = () => {
+                        if (window.supabaseClient && window.accessControl) {
+                            resolve();
+                        } else {
+                            setTimeout(check, 100);
+                        }
+                    };
+                    check();
+                });
             };
-            checkAndInitNotifications();
+
+            await waitForSupabase();
+
+            // Verificar acesso (redireciona se trial vencido)
+            const hasAccess = await window.accessControl.protegerPagina();
+            if (!hasAccess) return;
+
+            // Inicializar notificações
+            if (window.notifications) {
+                window.notifications.init();
+            }
         });
     </script>
 </body>
