--- a/app/pwa/coleta.html
+++ b/app/pwa/coleta.html
@@ -642,7 +642,20 @@
 
         <!-- Scripts -->
         <script src="../../js/supabase.js"></script>
+        <script src="../js/access-control.js"></script>
         <script src="js/coleta.js"></script>
+        <script>
+            // Verificar acesso antes de carregar a página
+            document.addEventListener('DOMContentLoaded', async () => {
+                const waitForSupabase = () => new Promise((resolve) => {
+                    const check = () => (window.supabaseClient && window.accessControl) ? resolve() : setTimeout(check, 100);
+                    check();
+                });
+                await waitForSupabase();
+                const hasAccess = await window.accessControl.protegerPagina();
+                if (!hasAccess) return;
+            });
+        </script>
 </body>
 
 </html>
